--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
     
           <!-- Spring Boot Actuator displays build-related information if a git.properties
             file is present at the classpath -->
-          <plugin>
+          <!-- <plugin>
             <groupId>pl.project13.maven</groupId>
             <artifactId>git-commit-id-plugin</artifactId>
             <executions>
@@ -232,7 +232,7 @@
               <failOnNoGitDirectory>false</failOnNoGitDirectory>
               <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
             </configuration>
-          </plugin>
+          </plugin> -->
     
           <plugin>
             <groupId>ro.isdc.wro4j</groupId>
