--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ logging.level.org.springframework=INFO
 spring.resources.cache.cachecontrol.max-age=12h
 
 spring.jpa.open-in-view=false
+#debug = true
