--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+# # database init, supports mysql too
+# database=hsqldb
+# spring.datasource.schema=classpath*:db/${database}/schema.sql
+# spring.datasource.data=classpath*:db/${database}/data.sql
+
 # database init, supports mysql too
-database=hsqldb
-spring.datasource.schema=classpath*:db/${database}/schema.sql
-spring.datasource.data=classpath*:db/${database}/data.sql
+database=mysql
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/student?characterEncoding=utf8
+spring.datasource.username=jcchen
+spring.datasource.password=jcchen
+# SQL is written to be idempotent so this is safe
+spring.datasource.initialization-mode=always
+
 
 # Web
 spring.thymeleaf.mode=HTML
