--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@
 # spring.datasource.schema=classpath*:db/${database}/schema.sql
 # spring.datasource.data=classpath*:db/${database}/data.sql
 
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
 # database init, supports mysql too
 database=mysql
 spring.datasource.url=jdbc:mysql://host.docker.internal:3306/student?characterEncoding=utf8
