--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.redis.port=6379
 
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/student?characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/student?characterEncoding=utf8
 spring.datasource.username=jcchen
 spring.datasource.password=jcchen
 # SQL is written to be idempotent so this is safe
