--- a/pom.xml
+++ b/pom.xml
@@ -281,7 +281,7 @@
                 <image>openjdk</image>
               </from>
               <to>
-                <image>student-management</image>
+                <image>student-with-cache</image>
               </to>
             </configuration>
           </plugin>
