--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
-# # database init, supports mysql too
-# database=hsqldb
-# spring.datasource.schema=classpath*:db/${database}/schema.sql
-# spring.datasource.data=classpath*:db/${database}/data.sql
+# spring.cache.type=redis
+# spring.redis.host=127.0.0.1
+# spring.redis.port=6379
+
+# database=mysql
+# spring.datasource.url=jdbc:mysql://127.0.0.1:3306/student?characterEncoding=utf8
+# spring.datasource.username=jcchen
+# spring.datasource.password=jcchen
+# spring.datasource.initialization-mode=always
 
 spring.cache.type=redis
-spring.redis.host=localhost
+spring.redis.host=host.docker.internal
 spring.redis.port=6379
 
-# database init, supports mysql too
 database=mysql
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/student?characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/student?characterEncoding=utf8
 spring.datasource.username=jcchen
 spring.datasource.password=jcchen
-# SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
 
 
