--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,40 @@
           <artifactId>spring-boot-devtools</artifactId>
           <optional>true</optional>
         </dependency>
+
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-batch</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.springframework.batch</groupId>
+          <artifactId>spring-batch-test</artifactId>
+          <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi</artifactId>
+          <version>5.0.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml</artifactId>
+          <version>5.0.0</version>
+        </dependency>
+
+
+        <dependency>
+          <groupId>org.springframework.batch.extensions</groupId>
+          <artifactId>spring-batch-excel</artifactId>
+          <version>0.1.0-SNAPSHOT</version>
+          <scope>system</scope>
+          <systemPath>${project.basedir}/src/main/resources/spring-batch-excel-0.1.0-SNAPSHOT.jar</systemPath>
+        </dependency>
       </dependencies>
     
       <build>
